# Propel

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.MD  docker-compose.yml  package-lock.json  posthog-self-driving-report.md
backend/: README.md  alembic.ini  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_auth_and_tenant_models.py  002_ingestion_tables.py  003_external_identities.py  004_tenant_role_permissions.py  005_waitlist_subscribers.py  006_zitadel_oidc_auth.py  007_posthog_warehouse_cdc.py  008_posthog_warehouse_password_sync.py  009_platform_auth.py  010_drop_zitadel_columns.py  011_restore_fastapi_users_auth_schema.py  012_posthog_publication_public_schema.py  013_metric_definitions.py  014_dashboard_preferences.py
backend/app/: config.py  feature_flags.py  logging_middleware.py  main.py  otel_logging.py  posthog_client.py  posthog_events.py  posthog_middleware.py  tracing.py
backend/app/auth/: database.py  dependencies.py  github_oauth.py  manager.py  middleware.py  oauth.py  oidc.py  password.py  permissions.py  reconcile.py  session.py
backend/app/db/: __init__.py  session.py
backend/app/ingestion/: __init__.py  cli.py  logging_config.py  meltano_runner.py  orchestrator.py
backend/app/ingestion/dagster/: __init__.py  definitions.py
backend/app/integrations/github/: app_auth.py  copilot.py
backend/app/integrations/linear/: oauth.py
backend/app/models/: __init__.py  connected_account.py  dashboard_preference.py  datapoint.py  enums.py  external_identity.py  ingestion_run.py  invite.py  membership.py  metric_definition.py  oauth_account.py  raw_record.py  role_permission.py  tenant.py  user.py  waitlist.py
backend/app/routers/: auth.py  connections.py  dashboard_preference.py  ingestion.py  invites.py  members.py  metric_definitions.py  metrics.py  roles.py  tenants.py  waitlist.py  zitadel_actions.py
backend/app/schemas/: connection.py  dashboard_preference.py  ingestion.py  invite.py  membership.py  metric_definitions.py  metrics.py  roles.py  tenant.py  user.py  waitlist.py
backend/app/services/: connections.py  dashboard_preference.py  github_identity.py  github_link.py  github_login.py  ingestion.py  invites.py  linear_connection.py  members.py  metric_compile.py  metric_definitions.py  metric_preview.py  metric_store.py  metrics.py  role_permissions.py  tenants.py  token_crypto.py  waitlist.py
backend/app/zitadel_actions/: idp_mapping.py
backend/cron/: ingestion  propel-ingestion.sh
backend/meltano/: README.md  meltano.yml
backend/meltano/tap-github-copilot/: pyproject.toml
backend/meltano/tap-github-copilot/tap_github_copilot/: __init__.py  streams.py  tap.py
backend/meltano/tap-linear/: pyproject.toml
backend/meltano/tap-linear/tap_linear/: streams.py  tap.py
backend/meltano/target-propel/: pyproject.toml
backend/meltano/target-propel/target_propel/: __init__.py  db.py  sinks.py  target.py
backend/meltano/target-propel/tests/: test_envelopes.py  test_target_integration.py  test_writers.py
backend/scripts/: start-ingestion.sh
backend/tests/: conftest.py  test_auth.py  test_auth_oidc.py  test_auth_oidc_metadata.py  test_auth_reconcile.py  test_auth_security.py  test_connections.py  test_dashboard_preference.py  test_feature_flags.py  test_github_copilot.py  test_github_identity.py  test_github_link.py  test_github_login.py  test_ingestion_api.py  test_ingestion_dagster.py  test_ingestion_envelopes.py  test_ingestion_idempotency.py  test_ingestion_orchestrator.py  test_ingestion_org_env.py  test_invites.py  test_linear_connection.py  test_main.py  test_members.py  test_metric_compile.py  test_metric_definitions.py  test_metric_definitions_m5.py  test_metric_swap_isolation.py  test_metric_swap_macro.py  test_metrics_api.py  test_otel_logging.py  test_password.py  test_posthog_client.py  test_role_permissions.py  test_schema_parity.py  test_tenants.py  test_waitlist.py  test_zitadel_idp_mapping.py
orchestration/: README.md  dagster.yaml  pyproject.toml  run_launcher_ecs.yaml  workspace.ecs.yaml  workspace.yaml
orchestration/propel_orchestration/: __init__.py  analytics.py  dask_resource.py  definitions.py  ecs_run_launcher.py  jobs.py  logging.py  metrics_compile.py  worker_scaling.py
orchestration/scripts/: prepare_dagster_db.py
orchestration/tests/: test_definitions.py
transformation/propel_metrics/: README.md  pyproject.toml
transformation/propel_metrics/propel_metrics/: __init__.py  cli.py  paths.py
transformation/propel_metrics/propel_metrics/catalog/: entities.yaml
transformation/propel_metrics/propel_metrics/codegen/: __init__.py  filters.py  preview.py  shared.py  sql.py
transformation/propel_metrics/propel_metrics/expr/: __init__.py  emit.py  json_ast.py  parse.py
transformation/propel_metrics/propel_metrics/ir/: __init__.py  build.py  hashutil.py  types.py
transformation/propel_metrics/propel_metrics/resolve/: __init__.py  lifecycle.py  org.py  params.py  parity.py  pins.py  semantic_diff.py  structural_diff.py
transformation/propel_metrics/propel_metrics/schema/: catalog.schema.json  metric.schema.json
transformation/propel_metrics/propel_metrics/store/: __init__.py  import_system.py  jsonfile.py  memory.py  protocol.py
transformation/propel_metrics/tests/: test_compile_gates.py  test_draft_autosave.py  test_expr.py  test_formula_corpus.py  test_goldens.py  test_invalid_fixtures.py  test_ir.py  test_m4_exit_criteria.py  test_m5_helpers.py  test_org_resolve.py  test_parity.py  test_preview.py  test_properties.py  test_push_pull.py  test_resolve_compile.py  test_schema_and_catalog.py  test_semantic_matrix.py  test_shared_compile.py  test_structural_diff.py  test_validate.py
(+446 files in other folders)
