[project]
name = "propel-metrics"
version = "0.1.0"
description = "Propel metric config format: validate and compile Metric YAML to dbt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23,<5",
    "pyyaml>=6,<7",
    "referencing>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.14.0",
]

[project.scripts]
propel-metrics = "propel_metrics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["propel_metrics"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["propel_metrics", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
