[project]
name = "tap-github-copilot"
version = "0.1.0"
description = "Singer tap for GitHub Copilot usage metrics (daily, as measurements)."
requires-python = ">=3.12"
dependencies = [
    "singer-sdk>=0.40.0",
    "requests>=2.31",
]

[project.scripts]
tap-github-copilot = "tap_github_copilot.tap:TapGitHubCopilot.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tap_github_copilot"]
