[project]
name = "tap-linear"
version = "0.1.0"
description = "Singer tap for Linear issues via the GraphQL API (events)."
requires-python = ">=3.12"
dependencies = [
    "singer-sdk>=0.40.0",
    "requests>=2.31",
]

[project.scripts]
tap-linear = "tap_linear.tap:TapLinear.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tap_linear"]
