[project]
name = "target-propel"
version = "0.1.0"
description = "Singer target that lands tap records as Propel raw_record + datapoint rows."
requires-python = ">=3.12"
dependencies = [
    "singer-sdk>=0.40.0",
    "psycopg[binary]>=3.1",
]

[project.scripts]
target-propel = "target_propel.target:TargetPropel.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["target_propel"]
